k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heart-model-group85
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heart-model-group85
  template:
    metadata:
      labels:
        app: heart-model-group85
    spec:
      containers:
      - name: heart-disease-prediction-api
        image: bashyan/heart-disease-api:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
