k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heart-model-group85
spec:
  type: ClusterIP
  selector:
    app: heart-model-group85
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
